# NBodyGenerator

./: .gitignore  CMakeLists.txt  Nbody.docx  README.md  generator.cpp  vcpkg.json
data/: dataset_redux.csv
include/: Body.hpp  BodyGenerator.hpp  BodySerialization.hpp
src/: BodyGenerator.cpp  CMakeLists.txt
